<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nuevaRutina"
        android:title="@string/nuevaRutina"
        android:icon="@drawable/icono_add"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/perfil"
        android:title="@string/perfil"
        android:icon="@drawable/icono_perfil"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/salir"
        android:title="@string/salir"
        android:icon="@drawable/icono_exit"
        app:showAsAction="always"
        />
    <item android:id="@+id/diaLunes"
        android:title="@string/lunes" />
    <item android:id="@+id/diaMartes"
        android:title="@string/martes" />
    <item android:id="@+id/diaMiercoles"
        android:title="@string/miercoles" />
    <item android:id="@+id/diaJueves"
        android:title="@string/jueves" />
    <item android:id="@+id/diaViernes"
        android:title="@string/viernes" />
    <item android:id="@+id/diaSabado"
        android:title="@string/sabado" />
    <item android:id="@+id/diaDomingo"
        android:title="@string/domingo" />
    <item android:id="@+id/todos"
        android:title="Mostrar todos" />

</menu>

